--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Conference Book of Abstracts</title>
 </head>
 <body>
+     <p>ETHIOPIAN INSTITUTE OF TEXTILE AND FASHION TECHNOLOGY, BAHIR DAR UNIVERSITY</p>
     <h1>13<sup>th</sup> CTA-2025</h1>
     <p>BOOK OF ABSTRACTS</p>
 
