--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Conference Book of Abstracts</title>
 </head>
+    <h1 style="color: blue;">ETHIOPIAN INSTITUTE OF TEXTILE AND FASHION TECHNOLOGY, BAHIR DAR UNIVERSITY</h1>
 <body>
      <p>ETHIOPIAN INSTITUTE OF TEXTILE AND FASHION TECHNOLOGY, BAHIR DAR UNIVERSITY</p>
     <h1>13<sup>th</sup> CTA-2025</h1>
