--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
     
 <body>
-    <h1 style="color: blue; font-size = 36px ">ETHIOPIAN INSTITUTE OF TEXTILE AND FASHION TECHNOLOGY, BAHIR DAR UNIVERSITY</h1>
+    <h1 style="color: blue; font-size = 24px; ">ETHIOPIAN INSTITUTE OF TEXTILE AND FASHION TECHNOLOGY, BAHIR DAR UNIVERSITY</h1>
     <h1>13<sup>th</sup> CTA-2025</h1>
     <p>BOOK OF ABSTRACTS</p>
 
