--- a/abstract1.1.html
+++ b/abstract1.1.html
@@ -14,26 +14,22 @@
     </style>
 </head>
 <body>
-    <h1>Abstract 1: Elastane Fibers in Textile Recycling - Analyzing the Product Group T-Shirts</h1>
+    <h1>Abstract 1: Capacity Building in Ethiopian Textile Industries: A Training Framework under the German-Ethiopian Textile School (GETS) Project</h1>
     
     <div class="authors">
-        Tanita Behrendt<sup>1,2</sup>*, Elisabeth Eppinger<sup>1</sup> <br>
-        <sup>1</sup> University of Applied Sciences and Economics Berlin, School of Culture and Design, Garment Technology, 12459 Berlin, Germany <br>
-        <sup>2</sup> Technical University Berlin, Faculty V- Mechanical Engineering and Transport Systems, 10623 Berlin, Germany <br>
+        Getnet Belay Tesema<sup>1,2</sup>*, Desalegn Beshaw<sup>1</sup>,Million Ayele<sup>1</sup>,Aberak Kechi<sup>1</sup>,Gashaw Ashagre<sup>1</sup>,Belaynesh Zemene<sup>1</sup>,Kilole Tesfaye<sup>1</sup>,Sarah,Halbauer<sup>2</sup>Anke,Pfau<sup>2</sup><br>
+        <sup>1</sup> Ethiopian Institute of Textile and Fashion Technology, Bahir Dar University, Bahir Dar, Ethiopia<br>
+        <sup>2</sup> Verband der Nord-Ostdeutschen, Textil- und Bekleidungsindustrie e.V., Annaberger Str. 240 09125 Chemnitz, Germany <br>
         *Corresponding Author: Tanita.Behrendt@gmail.com
     </div>
 
     <h2>ABSTRACT</h2>
     <p>
-        Garments are made of a large variety of different materials, from blended fibers to haberdashery items and colorants or finishings, making it difficult if not impossible to predict the composition of the post-consumer textile waste stream. 
-        This mix of materials complicates recycling efforts, contributing to less than 1 % of fiber-to-fiber (F2F) recycled fibers globally. To strengthen the industry’s efforts towards a more sustainable and circular textile industry, we must focus, among other things, on design for recycling and thus address the current challenges of the F2F recycling technologies.
-        Most garments are made from fiber blends, typically containing two or more different fibers. While beneficial for comfort and durability, fiber blends pose a significant obstacle for high quality F2F recycling. Especially the fiber elastane, though usually only present in small quantities, is a great challenge; from the detection of the fiber up to the removal and recycling of it. 
-        In a previous study, we looked at common haberdashery items on T-shirts. The following study focuses on elastane contents in T-shirts, considering the fit of the garment of several brands. The results will help to understand the product group T-shirts better and allow us to formulate ecodesign guidelines based on the current market status quo. The ecodesign guidelines will enable the garment producers to make better choices during material selection regarding design for recycling and will help shift the industry towards a circular economy.
-
+        The German-Ethiopian Textile School (GETS) project is a collaborative initiative between the Association of the North-East German Textile and Clothing Industry (vti) and the Ethiopian Institute of Textile and Fashion Technology (EiTEX), Bahir Dar University. This project aims to enhance the technical competencies of Ethiopian textile industry professionals through targeted training modules addressing key operational areas: fiber knowledge, quality control, productivity optimization, waste minimization, chemical management, and technical textiles. A comprehensive need assessment involving thirteen textile factories shaped the content and structure of the training. This paper outlines the methodology used for need assessment, summarizes the content of the delivered training modules, and discusses the outcomes and impact on the participating textile industries. The results demonstrate that the project significantly contributed to improved quality, productivity, environmental sustainability, and employee skill development — particularly in supporting women’s participation in technical roles. 
     </p>
 
     <h3>Keywords:</h3>
-    <p>Circularity, Contaminants, Ecodesign, Elastane, Sustainability, Textile Recycling</p>
+    <p>Textile Training, Capacity Building, Productivity and Quality Improvement, Sustainable Manufacturing, Technical Textiles</p>
 
     <a href="index.html">← Back to Abstracts List</a>
 </body>
