--- a/abstract9.html
+++ b/abstract9.html
@@ -14,25 +14,29 @@
     </style>
 </head>
 <body>
-    <h1>Abstract 24: Production and Biochemical Characterization of Keratinase Enzyme from B. SUBTILIS ES5 and its Potential Application in Leather Dehairing Process: A Clean Leather Tanning Process </h1>
+    <h1>Abstract 9:Enest Plant Corm Derived Reduced Graphene Oxide (E-Rgo/Fe3o4/Pani Nanocomposite for Energy Production and Toxic Metal Bioremediation Via Microbial Fuel Cells  </h1>
     
     <div class="authors">
-        Getachew Alamnie1* Amare Gessesse2 Misganaw Bitew3, Nebiyu Dawud3, Berhanu Andualem4, Abayeneh Girma1
-1 Mekdela Amba University, College of Natural and Computational Science, Department of Biology, 32 Tulu Awuliya, Ethiopia 
-2 Botswana International University of Science and Technology, Faculty of Sciences, Department of Biological Sciences and Biotechnology, 16 Palapye, Botswana  
-3  Bahir Dar Tannery Industry, Bahir Dar, Ethiopia
-4  University of Gondar, Institute of Biotechnology, Department of Industrial and Environmental Biotechnology, 196 Gondar, Ethiopia 
-*Corresponding Author: Email: getachewalamnie@gmail.com / getachew.alamnie@uog.edu.et 
+       Demise Alebachew, Getabalew Shifera Weldegrum*, Aknachew Mebreku Demeku, Tekalign Tesfaye, Endashaw Tilahun Gizawu, Nigus MareguDemewoz,Beshir A. Hussein,Shimeles Addisu Kitte,Cheru Talibachew Haile
+Department of Chemistry, Mettu University, Mettu Ethiopia, P.O.Box 318
+Departmentof Materials Science and Engineering, National Taiwan University of Science andTechnology, Taipei 106335, Taiwan
+Departmentof physics, DebreBerhan University, P.O. Box: 445, DebreBerhan, Ethiopia
+Department of physics, Woldia university, Woldia 400 , Ethiopia
+Department of Mechanical & Industrial Engineering, University of Toronto, Toronto, Ontario M5S 3G8, Canada 
+Departmentof Physics, Wollo University, Dessie, Ethiopia
+Department of Chemistry,MekdelaAmba University, Ethiopia, P.O.Box 32
+Department of Chemistry, Jimma University, Jimma Ethiopia, P.O.Box 378
+*Corresponding Author Email: Corresponding author email: getabalewsos@gmail.com
 
     </div>
 
     <h2>ABSTRACT</h2>
     <p>
-        The traditional leather industry releases different chemical wastes into the environment. There is therefore an urgent need to use alternative non-polluting processes, and the use of biological catalysts in industrial processing has received a great deal of attention in recent years, mainly for environmental reasons. Therefore, the main objective of this study was to produce and characterize keratinase enzyme from B. subtilis ES5 and evaluate its potential application for leather dehairing. The gene encoding keratinase was validated with a fragment length of approximately 1100 bp. The keratinase exhibited maximum activity at temperature and pH of 45℃ and 8, respectively. Among the tested metal ions Ca2+ and Mg2+ improved keratinase activity by 132.56 and 111.78%, respectively at concentrations of 5 mM. β-mercaptoethanol enhanced keratinolytic activity. However, ethylenediaminetetraacetic acid (EDTA) significantly inhibited it, indicating that the enzyme is a member of the metalloprotease family. It completely dehaired goat/sheep skins within 14 h, resulting in decreased biochemical oxygen demand (BOD5), chemical oxygen demand (COD), total dissolved solids (TDS), total suspended solids (TSS), and overall pollution load by 57.39, 70.53, 93.59, 94.90, and 79.10%, respectively. The results demonstrated the pivotal advantages of this keratinase, addressing environmentally friendly processing and sustainable solid waste management. The improved properties of enzyme-treated dehaired pelts suggest that crude keratinase could be used in ecologically friendly holistic leather manufacturing to avoid the pollution issues associated with the use of chemicals.
+       Microbial fuel cell (MFC) technology is currently receiving a great deal of attention as a promising and sustainable technology for generating electricity and reducing environmental pollution. However, low energy generation and the cost of producing anode materials have hindered the commercial viability of MFCs. In this work, the double chamber of MFCs was equipped with an anode made of enset corm biomass-waste-derived graphene derivatives (E-rGO). Furthermore, composite-based anodes (E-rGO/Fe3O4 and E-rGO/Fe3O4/PANI) have been developed to remediate Cr (VI) and Pb (II) ions in wastewater while producing energy in order to increase the electron transmission rate. The synthesis materials were analyzed through UV-Vis, SEM, and XRD, FTIR, RAMA and TGA spectroscopy to examine their optical, morphological, structural properties, molecular vibration states, structural defects, and thermal stability of the materials respectively.CV and EIS were also utilized to investigate the electrochemical characteristics of the synthesized materials. For Cr (VI), the anodes made using E-rGO, E-rGO/Fe3O4, and E-rGO/Fe3O4/PANI nanocomposites (NCs) had remediation efficiencies of 70.6%, 79.2%, and 88.3%, while for Pb (II), they were 65.1%, 73.8%, and 86.5%.Furthermore, the composite anode (E-rGO/Fe3O4/PANI NCs) delivered a maximum power density of (63mW/m2) and a current density of (1312mA/m2), higher than E-rGO and E-rGO/Fe3O4 modified anode electrode power density (8.75 and 39.77mW/m2) and current density (609 and 1171 mA/m2), respectively. 
  </p>
 
     <h3>Keywords:</h3>
-    <p>Characterization; Dehairing; Effluent analysis; Enzyme production; Keratinase; Leather </p>
+    <p>Anode modification, Energy production, Graphene  </p>
 
     <a href="index.html">← Back to Abstracts List</a>
 </body>
