--- a/abstract1.html
+++ b/abstract1.html
@@ -20,7 +20,9 @@
         Getnet Belay Tesema<sup>1,2</sup>*, Desalegn Beshaw<sup>1</sup>,Million Ayele<sup>1</sup>,Aberak Kechi<sup>1</sup>,Gashaw Ashagre<sup>1</sup>,Belaynesh Zemene<sup>1</sup>,Kilole Tesfaye<sup>1</sup>,Sarah,Halbauer<sup>2</sup>Anke,Pfau<sup>2</sup><br>
         <sup>1</sup> Ethiopian Institute of Textile and Fashion Technology, Bahir Dar University, Bahir Dar, Ethiopia<br>
         <sup>2</sup> Verband der Nord-Ostdeutschen, Textil- und Bekleidungsindustrie e.V., Annaberger Str. 240 09125 Chemnitz, Germany <br>
-        *Corresponding Author: Tanita.Behrendt@gmail.com
+       
+        *Corresponding Author: getbeltes@gmail.com
+        
     </div>
 
     <h2>ABSTRACT</h2>
