--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>BOOK OF ABSTRACTS</p>
 
     <!-- Add an image -->
-    <img id="hover-image" src="CTA-2025.png" alt="Hover Effect Image">
+    <img id="hover-image" src="CTA-2025.jpg" alt="Hover Effect Image">
 
     <script src="CTA-2025.jpg"></script>  <!-- Link to JavaScript -->
 
