--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
     
 <body>
     <h1 style="color: blue; font-size: 36px; margin-top: 50px;">ETHIOPIAN INSTITUTE OF TEXTILE AND FASHION TECHNOLOGY, <br>
-        BAHIR DAR UNIVERSITY</h1>
-    <h1>13<sup>th</sup> CTA-2025</h1>
-    <p>BOOK OF ABSTRACTS</p>
+    BAHIR DAR UNIVERSITY</h1>
+<h1>13<sup>th</sup> CTA-2025</h1>
+<p>BOOK OF ABSTRACTS</p>
 
-    <!-- Add an image -->
-    <img id="hover-image" src="CTA-2025.jpg" alt="Hover Effect Image">
+<!-- Correct Image -->
+<img id="hover-image" src="CTA-2025.jpg" alt="Hover Effect Image">
 
+<!-- No <script> needed for image! -->
+
+<!-- Links to abstracts -->
+<p><a href="abstract1.html">Abstract 1</a></p>
     <p><a href="abstract1.html">Abstract 1</a></p>
     <p><a href="abstract2.html">Abstract 2</a></p>
     <p><a href="abstract3.html">Abstract 3</a></p>
