--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1 style="color: blue; font-size: 36px; margin-top: 50px;">ETHIOPIAN INSTITUTE OF TEXTILE AND FASHION TECHNOLOGY, <br>
     BAHIR DAR UNIVERSITY</h1>
-<h1>13<sup>th</sup> CTA-2025</h1>
+<h1>13<sup>th</sup> CTA-2025.jpg</h1>
 <p>BOOK OF ABSTRACTS</p>
 
 <!-- Correct Image -->
