--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <p><a href="abstract24.html">Abstract 24</a></p>
     <index>
         <section id="abstract1">
-            <h2>Abstract 1: Elastane Fibers in Textile Recycling</h2>
-            <p>Garments are made of a large variety of different materials, making it difficult to predict the composition of post-consumer textile waste. This study focuses on elastane contents in T-shirts...</p>
+            <h2>Abstract 1: Capacity Building in Ethiopian Textile Industries: A Training Framework under the German-Ethiopian Textile School (GETS) Project</h2>
+            <p>The German-Ethiopian Textile School (GETS) project is a collaborative initiative between the Association of the North-East German Textile and Clothing Industry (vti) and the Ethiopian Institute of Textile and Fashion Technology (EiTEX), Bahir Dar University....</p>
         </section>
         
         <section id="abstract2">
